--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,6 +1,6 @@
 .home-container {
   display: flex;
-  height: 100vh;
+  height: calc(100vh);
   width: 100%;
   background-color: #1e1e2f;
   color: white;
